@@ -51,8 +51,6 @@ setup(name='plone.app.contentrules',
         'zope.traversing',
         'Acquisition',
         'Products.CMFPlone',
-        'Products.Archetypes',
-        'Products.ATContentTypes',
         'Products.CMFCore',
         'Products.CMFDefault',
         'Products.GenericSetup',
